# mlx-audio-bridge

./: .gitignore  README.en.md  README.md  pyproject.toml
deploy/: com.quasarryan.mlxaudio.api.plist  voice-style.json  voices.json
src/qwen3_tts_mlx_server/: __init__.py  app.py  audio.py  cli.py  errors.py  models.py  schemas.py  settings.py
src/qwen3_tts_mlx_server/backends/: __init__.py  base.py  qwen_tts.py
tests/: test_api.py  test_settings.py
